--- a/public/events.html
+++ b/public/events.html
@@ -32,7 +32,7 @@
             <a class="nav-link" href="About.html">About<span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="events.html">Events</a>
+            <a class="nav-link" href="#">Events</a>
           </li>
           <li class="nav-item ">
             <a class="nav-link" href="#">Women<span class="sr-only">(current)</span></a>
@@ -62,88 +62,7 @@
   <!-- Nav-->
 
   <!-- Content-->
-  <div class="block2">
-    <div class="container">
-      <div class="row align-items-center">
-        <div class="col-lg-5">
-          <figure class="effect-lily max">
-            <img src="images/8.png" alt="brooklynwets">
-          </figure>
-        </div>
-        <div class="col-lg-7 py-5">
-          <h1 class="mb-4 text-uppercase font-weight-bold">the Brooklyn Wets</h1>
-          <h3 class="mb-4">We were founded in 2015 after an overwhelming response to our New York Water Polo Meetup.
-            We provide a place to scrimmage and a group to have a beer with after the scrimmage. Ages of members range
-            from 18 to "None of your business."
-            We're co-ed, and field teams for women's and co-ed games.
-          </h3>
-          <h3 class="mb-4">The game is the greatest teacher of the game. Our coaches like talking but refer watching you
-            have fun.
-            If you want advice on your game, ask the coaches. Drills are simple and short. We want you to play and have
-            fun.
-          </h3>
-        </div>
-      </div>
-      <div class="row align-items-center">
-        <div class="col-lg-7 py-5">
-          <h2 class="mb-4 text-uppercase font-weight-bold">Our Philosophy</h2>
-          <h3 class="mb-4">The game is the greatest teacher of the game. Our coaches like talking but refer watching you
-            have fun.
-            If you want advice on your game, ask the coaches. Drills are simple and short. We want you to play and have
-            fun.
-          </h3>
-        </div>
-        <div class="col-lg-5">
-          <figure class="effect-lily max">
-            <img src="images/8.png" alt="brooklynwets">
-          </figure>
-        </div>
-      </div>
-      <div class="row align-items-center">
-        <div class="col-lg-7 py-5">
-          <h2 class="mb-4 text-uppercase font-weight-bold">Be Part of Our Team</h2>
-          <h3 class="mb-4">We are straight, gay, white, brown, black, Romanian, Canadian, Australian, etc.
-            It's New York, so it's a diverse crew. It's a good time, and you should join us.
-          </h3>
-        </div>
-        <div class="col-lg-5">
-          <figure class="effect-lily max">
-            <img src="images/8.png" alt="brooklynwets">
-          </figure>
-        </div>
-      </div>
 
-    </div>
-  </div>
-  <div class="mailchimp">
-    <div class="container text-center">
-      <div class="row justify-content-center">
-        <div class="col-xl-7 col-lg-8">
-          <h2 class="mb-0 uppercase font-weight-bold">Practice Times</h2>
-          <p class="text-white-50 mb-4">We practice Saturdays 2-3:30PM at Metropolitan Rec Center in Williamsburg. We
-            also have a more instructional beginner friendly practice at Mondays at 6pm at the Gertrude Ederle
-            Recreation Center. Subscribe for more information.</p>
-          <div id="mc_embed_signup">
-            <form role="form" action="" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form"
-              target="_blank" novalidate="novalidate">
-              <div class="input-group input-group-lg">
-                <input type="email" name="EMAIL" class="form-control border-0" id="mce-EMAIL"
-                  placeholder="Email address...">
-                <div class="input-group-append">
-                  <button type="submit" name="subscribe" id="mc-embedded-subscribe"
-                    class="btn btn-light">Subscribe!</button>
-                </div>
-              </div>
-              <div id="mce-responses">
-                <div class="response" id="mce-error-response" style="display:none"></div>
-                <div class="response" id="mce-success-response" style="display:none"></div>
-              </div>
-            </form>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
   <!-- Content-->
 
 
