--- a/public/index.html
+++ b/public/index.html
@@ -32,7 +32,7 @@
             <a class="nav-link" href="About.html">About<span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Events</a>
+            <a class="nav-link" href="events.html">Events</a>
           </li>
           <li class="nav-item ">
             <a class="nav-link" href="#">Women<span class="sr-only">(current)</span></a>
