--- a/public/index.html
+++ b/public/index.html
@@ -91,21 +91,21 @@
         <div class="col-lg-5">
           <div class="py-5 px-4 masthead-cards">
             <div class="d-flex">
-              <a href="" class="w-40 pr-3 pb-4">
+              <a href="" class="w-50 pr-3 pb-4">
                 <div class="card border-0 border-bottom-red shadow-lg shadow-hover">
                   <div class="card-body text-center">
                     <div class="text-center">
-                      <img src="images/icon1.svg" width="100" height="100" class="d-inline-block align-middle" alt="">
+                      <img src="images/icon1.svg" class="d-inline-block align-middle" alt="">
                     </div>
                     Donations
                   </div>
                 </div>
               </a>
-              <a href="" class="w-40 pl-3 pb-4">
+              <a href="" class="w-50 pr-3 pb-4">
                 <div class="card border-0 border-bottom-blue shadow-lg shadow-hover">
                   <div class="card-body text-center">
                     <div class="text-center">
-                      <img src="images/icon5.svg" width="100" height="100" class="d-inline-block align-middle" alt="">
+                      <img src="images/icon5.svg" class="d-inline-block align-middle" alt="">
                     </div>
                     Team does!
                   </div>
@@ -113,13 +113,13 @@
               </a>
             </div>
             <div class="d-flex">
-              <a href="About.html#Who_can_practice" class="w-40 pr-3">
-                <div class="card border-0 border-bottom-yellow shadow-lg shadow-hover">
+              <a href="" class="w-50 pr-3 pb-4">
+                <div class="card border-0 border-bottom-blue shadow-lg shadow-hover">
                   <div class="card-body text-center">
                     <div class="text-center">
-                      <img src="images/icon3.svg" width="100" height="100" class="d-inline-block align-middle" alt="">
+                      <img src="images/icon3.svg" height="100px" width="100px" class="d-inline-block align-middle" alt="">
                     </div>
-                    Who can practice?
+                    Team does!
                   </div>
                 </div>
               </a>
