--- a/public/About.html
+++ b/public/About.html
@@ -31,14 +31,11 @@
           <li class="nav-item active">
             <a class="nav-link" href="About.html">About<span class="sr-only">(current)</span></a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link" href="events.html">Events</a>
-          </li>
           <li class="nav-item ">
             <a class="nav-link" href="women.html">Women<span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Locations</a>
+            <a class="nav-link" href="locations.html">Locations</a>
           </li>
         </ul>
         <ul class="navbar-nav pb-3 pb-lg-0">
@@ -193,7 +190,7 @@
               also have a more instructional beginner friendly practice at Mondays at 6pm at the Gertrude Ederle
               Recreation Center. Subscribe for more information.</p>
             <div id="mc_embed_signup">
-              <a href="events.html" class="btn btn-dark btn-lg active" role="button" aria-pressed="true">CALENDAR!</a>
+              <a href="events.html" class="btn btn-dark btn-lg active" role="button" aria-pressed="true">LOCATIONS!</a>
             </div>
           </div>
         </div>
