--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
   <!-- Nav-->
   <nav class="navbar fixed-top navbar navbar-expand-lg navbar-light bg-light sb-navbar">
     <div class="container">
-      <a class="navbar-brand" href="#">
+      <a class="navbar-brand" href="index.html">
         <img src="images/logo_final.svg" width="50" height="50" class="d-inline-block align-middle" alt="">
         <span class="ml-1 font-weight-bolder align-middle">Brooklyn Wets</span>
       </a>
@@ -31,14 +31,11 @@
           <li class="nav-item active">
             <a class="nav-link" href="About.html">About<span class="sr-only">(current)</span></a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link" href="events.html">Events</a>
-          </li>
           <li class="nav-item ">
             <a class="nav-link" href="women.html">Women<span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Locations</a>
+            <a class="nav-link" href="locations.html">Locations</a>
           </li>
         </ul>
         <ul class="navbar-nav pb-3 pb-lg-0">
