--- a/public/locations.html
+++ b/public/locations.html
@@ -38,14 +38,11 @@
           <li class="nav-item active">
             <a class="nav-link" href="About.html">About<span class="sr-only">(current)</span></a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link" href="events.html">Events</a>
-          </li>
           <li class="nav-item ">
             <a class="nav-link" href="women.html">Women<span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Locations</a>
+            <a class="nav-link" href="locations.html">Locations</a>
           </li>
         </ul>
         <ul class="navbar-nav pb-3 pb-lg-0">
@@ -77,11 +74,7 @@
       </div>
     </section>
     <div class="Eventcont">
-      <div class="responsive-iframe-container big-container">
-        <iframe
-          src="https://calendar.google.com/calendar/embed?height=600&amp;wkst=1&amp;bgcolor=%23ffffff&amp;ctz=America%2FBogota&amp;src=YWlqcTZoa3BxbTNtZHJ1cm83M2ptbXQ5ZDhAZ3JvdXAuY2FsZW5kYXIuZ29vZ2xlLmNvbQ&amp;color=%23616161&amp;mode=AGENDA&amp;showPrint=0"
-          style="border-width:0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
-      </div>
+     
     </div>
   </div>
   <!-- Content-->
