--- a/public/women.html
+++ b/public/women.html
@@ -31,14 +31,11 @@
                     <li class="nav-item active">
                         <a class="nav-link" href="About.html">About<span class="sr-only">(current)</span></a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="events.html">Events</a>
-                    </li>
                     <li class="nav-item ">
                         <a class="nav-link" href="women.html">Women<span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Locations</a>
+                        <a class="nav-link" href="locations.html">Locations</a>
                     </li>
                 </ul>
                 <ul class="navbar-nav pb-3 pb-lg-0">
@@ -75,14 +72,14 @@
 <!--==========================
     Intro Section
   ============================-->
-    <section id="intro" class="clearfix">
+    <section id="intro" class="clearfix ">
         <div class="container align-self-center">
 
             <div class="intro-img">
                 <img src="images/BW_Woman.svg" alt="" class="img-fluid">
             </div>
 
-            <div class="intro-info">
+            <div class="intro-info ">
                 <h1 class="min display-3 font-weight-bold" style="color: white;">Our women's team is growing!</h1>
                 <h4 class="text-justify text-light">Our ladies like to play against the boys and against other women,
                     scrimmaging with NYAC and Columbia.
@@ -107,7 +104,7 @@
             <div class="container">
 
                 <!-- Grid row-->
-                <div class="row py-4 d-flex align-items-center" style="margin-top: 0px;">
+                <div class="row py-4 d-flex" style="margin-top: 0px;">
 
                     <!-- Grid column -->
                     <div class="col-md-6 col-lg-5 text-center text-md-left mb-4 mb-md-0 text-white">
