--- a/public/About.html
+++ b/public/About.html
@@ -74,7 +74,7 @@
             <div class="col-lg-5 col-xl-5 pb-3">
               <!--Featured image-->
               <div class="view overlay rounded z-depth-2">
-                <img src="images/1.png" alt="Sample image for first version of blog listing" class="img-fluid">
+                <img src="images/17BW.JPG" alt="Sample image for first version of blog listing" class="img-fluid">
                 <a>
                   <div class="mask waves-effect waves-light"></div>
                 </a>
@@ -129,7 +129,7 @@
             <div class="col-lg-5 col-xl-5 mb-5">
               <!--Featured image-->
               <div class="view overlay rounded z-depth-2">
-                <img src="images/3.png" alt="Second image in the first version of blog listing" class="img-fluid">
+                <img src="images/30BW.JPG" alt="Second image in the first version of blog listing" class="img-fluid">
                 <a>
                   <div class="mask waves-effect waves-light"></div>
                 </a>
@@ -149,7 +149,7 @@
             <div class="col-lg-5 col-xl-5 pb-3">
               <!--Featured image-->
               <div class="view overlay rounded z-depth-2">
-                <img src="images/2.png" alt="Thrid image in the blog listing." class="img-fluid">
+                <img src="images/38WB.JPG" alt="Thrid image in the blog listing." class="img-fluid">
                 <a>
                   <div class="mask waves-effect waves-light"></div>
                 </a>
