--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
     integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/baguettebox.js/1.10.0/baguetteBox.min.css" />
   <link rel="stylesheet" href="css/bootstrap.css">
-  <title>Brooklyn Wets</title>
+  <title>Brooklyn Wets!</title>
 </head>
 
 <body>
