--- a/public/index.html
+++ b/public/index.html
@@ -62,7 +62,7 @@
   <header>
     <div class="overlay"></div>
     <video playsinline="playsinline" autoplay="autoplay" muted="muted" loop="loop">
-      <source src="/images/BW.MP4" type="video/mp4">
+      <source src="https://brooklyn-wets.s3.us-east-2.amazonaws.com/BW.mp4" type="video/mp4">
     </video>
     <div class="container h-100">
       <div class="d-flex h-100 text-center align-items-center">
